# website_scraper_api

./: .env  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  stop_app.sh
app/: crud.py  database.py  main.py  schemas.py  scraper.py  settings.py  validators.py
app/db/: crud.py  database.py  models.py
app/utils/: exceptions.py  log.py  utils.py  validators.py
tests/: conftest.py  test_app.py  test_main.py  test_scraper.py  test_validators.py
tests/db/: test_database.py  test_db.py  test_postgres.yml
tests/test_data/: jsonapi.html  parsed_text.txt
tests/utils/: test_utils.py  test_validators.py
