[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mgajewskik <mgajewskik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.3.23"
requests = "^2.25.1"
boto3 = "^1.17.23"
psycopg2-binary = "^2.8.6"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
darker = "^1.2.2"

[tool.darker]
src = [
    "app",
    "tests",
]
revision = "master"
log_level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
