[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mgajewskik <mgajewskik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.3.23"
requests = "^2.25.1"
boto3 = "^1.17.23"
psycopg2-binary = "^2.8.6"
validators = "^0.18.2"
beautifulsoup4 = "^4.9.3"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
